[package]
name = "piedpiper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"

[lib]
name = "libpiedpiper"
path = "src/lib.rs"


[[bin]]
name = "piedpiper"
path = "src/pied_piper.rs"
